--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,6 @@
   margin: 8px 0 30px 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 input[type="text"] {
@@ -36,8 +35,8 @@ input:invalid {
 }
 
 button {
-  margin-top: 8px;
-  border-radius: 8px;
+  margin: 4px;
+  border-radius: 4px;
   border: 0;
   cursor: pointer;
 }
@@ -64,4 +63,9 @@ th {
 th, td {
   padding: 4px 15px;
   text-align: left;
+}
+
+#devices {
+  border-radius: 4px;
+  padding: 0 8px;
 }
